corrected some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,13 @@ height: 100%;
   left: 50%;
   transform: translate(-50%,-50%);
   padding: 4px;
-  width:75%;
+  width:75% !important;
 }
 
+@media screen and (min-width: 400px) {
+    .lead {
+        font-size: 16px;
+        text-align: justify;
+    }
+}
 
